[gd_scene load_steps=8 format=3 uid="uid://codo7mgck2bi1"]

[ext_resource type="Script" path="res://scens/blocks/moving_block.gd" id="1_gcj47"]
[ext_resource type="Texture2D" uid="uid://r67ebqxtr13y" path="res://sprites/env1/wall_01_shadow.png" id="2_1lvk5"]
[ext_resource type="Texture2D" uid="uid://ce7yfb8vgq07v" path="res://sprites/env1/moveable0.png" id="3_yoiwy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_40vhp"]
size = Vector2(100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lgaa"]
atlas = ExtResource("3_yoiwy")
region = Rect2(0, 0, 333, 401)

[sub_resource type="SpriteFrames" id="SpriteFrames_cyh01"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lgaa")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j866o"]
size = Vector2(105, 105)

[node name="BlockBody2D" type="CharacterBody2D"]
script = ExtResource("1_gcj47")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_40vhp")

[node name="ShadowSprite2D" type="Sprite2D" parent="."]
position = Vector2(-6.5, -15)
scale = Vector2(0.295053, 0.322124)
texture = ExtResource("2_1lvk5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(-1.19209e-07, -20)
scale = Vector2(0.315315, 0.366584)
sprite_frames = SubResource("SpriteFrames_cyh01")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_j866o")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
